# MazePi

./: CMakeLists.txt  Camera.cpp  Camera.h  Config.h  ImageProcessor.cpp  ImageProcessor.h  KNearestOcr.cpp  KNearestOcr.h  Log.cpp  Log.h  Matrix.cpp  Matrix.h  RTMUtils.cpp  RTMUtils.h  STMConnect.cpp  STMConnect.h  Serial.cpp  Serial.h  Serial.py  Vector.h  clearLog.sh  compile.sh  disableApache.sh  enableApache.sh  main.cpp
LCD/: CMakeLists.txt  LCD.h  a.out  build.sh  lcd_i2c.h.gch  lcdi2c.h  lcdi2c.h.gch  main.cpp
MazeArd/: Matrix.h  MazeArd.ino
MazePi/: CMakeLists.txt  Matrix.cpp  Matrix.h  main.cpp
